// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapStateToProps adds isLoggedIn and isSuperUser fields to the user 1`] = `
Object {
  "allUsers": Object {
    "123": Object {
      "id": 123,
    },
    "456": Object {
      "hasUnreadNotifications": undefined,
      "id": 456,
      "isLoggedIn": true,
      "isSuperUser": true,
      "unreadNotificationCount": undefined,
    },
  },
  "user": Object {
    "hasUnreadNotifications": undefined,
    "id": 456,
    "isLoggedIn": true,
    "isSuperUser": true,
    "unreadNotificationCount": undefined,
  },
}
`;

exports[`mapStateToProps provides the current user in denormalized form 1`] = `
Object {
  "allUsers": Object {
    "123": Object {
      "id": 123,
    },
    "456": Object {
      "hasUnreadNotifications": undefined,
      "id": 456,
      "isLoggedIn": undefined,
      "isSuperUser": undefined,
      "unreadNotificationCount": undefined,
    },
  },
  "user": Object {
    "hasUnreadNotifications": undefined,
    "id": 456,
    "isLoggedIn": undefined,
    "isSuperUser": undefined,
    "unreadNotificationCount": undefined,
  },
}
`;
